--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
     <span><i class="fas fa-chevron-up"></i></span>
 </div>
 
+<div class="fb-comments" data-href="https://angel-048.github.io/luisangelss.github.io/#" data-width="300" data-numposts="9"></div>
+
 <!-- Footer -->
 <footer id="footer">
     <p>&copy; ISC - LUIS ANGEL SANCHEZ SANCHEZ - 2021</p>
