--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
     <span><i class="fas fa-chevron-up"></i></span>
 </div>
 
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v10.0" nonce="PGDRT4Rr"></script>
 <div class="fb-comments" data-href="https://angel-048.github.io/luisangelss.github.io/#" data-width="300" data-numposts="9"></div>
 
 <!-- Footer -->
